# bank-telemarketing

banking-telemarketing/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
banking-telemarketing/docs/: mkdocs.yml
banking-telemarketing/docs/docs/: index.md
banking-telemarketing/notebooks/: data_cleaning.ipynb  exploratory.ipynb
